fix: tables taking too much space on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,10 @@
     display: none;
 }
 
+math {
+    overflow-x: auto;
+}
+
 @media (prefers-color-scheme: dark) {
   .astro-code,
   .astro-code span {
